<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/my_grey">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/my_grey">

        <TextView
            android:text="@string/cur_pass"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="91dp"
            android:id="@+id/email_passverif_label"
            android:textColor="@color/my_blue"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="10"
            android:layout_below="@+id/email_passverif_label"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:id="@+id/email_passverif"
            android:background="@drawable/border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/password_text"
            android:textSize="24sp" />

        <TextView
            android:text="@string/new_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/email_passverif"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="47dp"
            android:id="@+id/current_email"
            android:textColor="@color/my_blue"
            android:textStyle="normal|bold"
            android:textSize="18sp" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:layout_below="@+id/current_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:id="@+id/new_email"
            android:background="@drawable/border"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:hint="@string/email_text"
            android:textSize="24sp" />

        <Button
            android:text="@string/submit_change"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/new_email"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="45dp"
            android:id="@+id/submit_email"
            android:background="@drawable/custom_button"/>

    </RelativeLayout>
</LinearLayout>