<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".authentication.SignUp">


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signup_passwordConfirm"
        android:hint="@string/confirm_pass"

        android:layout_below="@+id/signup_passwordText"
        android:layout_alignLeft="@+id/signup_passwordText"
        android:layout_alignStart="@+id/signup_passwordText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:id="@+id/signup_button"
        android:layout_below="@+id/signup_passwordConfirm"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text=""
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signup_errorText"
        android:textColor = "#ff0000"
        android:layout_below="@+id/signup_button"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signup_emailText"
        android:layout_marginTop="82dp"
        android:hint="@string/enter_email"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems = "10"
        android:id ="@+id/signup_usernameText"
        android:hint="Enter Username"
        android:layout_alignParentTop="true"
        android:layout_alignLeft="@+id/signup_emailText"
        android:layout_alignStart="@+id/signup_emailText"
        android:layout_marginTop="38dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signup_passwordText"
        android:hint="@string/enter_pass"
        android:layout_below="@+id/signup_emailText"
        android:layout_alignLeft="@+id/signup_emailText"
        android:layout_alignStart="@+id/signup_emailText"
        android:layout_marginTop="48dp" />


</RelativeLayout>
