<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".authentication.SignIn"
    android:background="@color/my_blue">


    <EditText
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textEmailAddress"
        android:ems="10"
        android:id="@+id/signin_emailText"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="175dp"
        android:paddingLeft="10dp"
        android:hint="@string/email_text"
        android:textSize="24sp" />

    <EditText
        android:background="@drawable/border"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/signin_passwordText"
        android:layout_below="@+id/signin_emailText"
        android:layout_alignLeft="@id/signin_emailText"
        android:layout_alignStart="@id/signin_emailText"
        android:layout_marginTop="44dp"
        android:paddingLeft="10dp"
        android:hint="@string/password_text"
        android:textSize="24sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/login_button"
        android:layout_below="@id/signin_passwordText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="46dp"
        android:background="@drawable/custom_button"/>

    <Button
        android:text="Dev-In"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/signin_alexIn"
        android:layout_below="@+id/signup_link"
        android:layout_marginTop="25dp"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/signup_msg"
        android:id="@+id/signup_link"
        android:layout_marginTop="46dp"
        android:clickable="true"
        android:background="?android:attr/selectableItemBackground"
        android:onClick = "gotoSignUp"
        android:layout_below="@+id/login_button"
        android:layout_centerHorizontal="true" />

    <TextView
        android:text="PhoneAFriend"
        android:textSize="32sp"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="88dp"
        android:id="@+id/textView" />

</RelativeLayout>
