<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_update_password"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="seniordesign.phoneafriend.updateSettings.updatePassword"
    android:background="@color/my_grey">

    <TextView
        android:text="@string/cur_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="67dp"
        android:id="@+id/current_password_label"
        android:textColor="@color/my_blue"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/current_password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/current_password"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/cur_pass"
        android:textSize="24sp" />

    <TextView
        android:text="@string/new_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/current_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/new_password_label"
        android:textColor="@color/my_blue"
        android:textSize="18sp"
        android:textStyle="normal|bold" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/new_password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/new_pass_text"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/new_pass"
        android:textSize="24sp" />

    <TextView
        android:text="@string/confirm_pass"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/new_pass_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:id="@+id/confirm_password_label"
        android:textColor="@color/my_blue"
        android:textStyle="normal|bold"
        android:textSize="18sp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_below="@+id/confirm_password_label"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:id="@+id/confirm_pass_text"
        android:background="@drawable/border"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:hint="@string/confirm_pass"
        android:textSize="24sp" />

    <Button
        android:text="@string/submit_change"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/confirm_pass_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="45dp"
        android:id="@+id/submit_pass"
        android:background="@drawable/custom_button"/>


</RelativeLayout>
